maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:16: error: ':' expected but ',' found.
def avance  (x,y):(Int,Int)  {
              ^ShortestPathMaze:36: error: identifier expected but '}' found.
}
^